<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.home.HomeFragment"
        android:background="@drawable/background">


        <Button
            android:id="@+id/emergencyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/Emergency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/Profile_Picture"
            android:layout_width="@dimen/Profile_Picture"
            android:layout_height="@dimen/Profile_Picture"
            app:cardCornerRadius="@dimen/Corner_Radius_Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Profile_Picture_Content_Des"
                android:scaleType="centerCrop"
                 />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/Welcome_Text"
            android:textColor="@color/Text_white"
            android:textSize="@dimen/Welcome_Text"
            app:layout_constraintStart_toEndOf="@+id/Profile_Picture"
            app:layout_constraintTop_toTopOf="@+id/Profile_Picture" />

        <TextView
            android:id="@+id/exposure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Exposure"
            android:textColor="@color/Text_white"
            android:textSize="@dimen/Welcome_Text"
            app:layout_constraintStart_toStartOf="@+id/Profile_Picture"
            app:layout_constraintTop_toBottomOf="@+id/Profile_Picture" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/Exposure_Description"
            android:textColor="@color/Text_white"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="@+id/exposure"
            app:layout_constraintTop_toBottomOf="@+id/exposure" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/Logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_border"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/News_Feed"
            android:textColor="@color/Text_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emergencyButton" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Scroll_View_Dimens_Height"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="@dimen/Corner_Radius_Small">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="@dimen/Scroll_View_Dimens_Height"
                        android:layout_height="@dimen/Scroll_View_Dimens_Height"
                        android:contentDescription="@string/Profile_Picture_Content_Des"
                        android:scaleType="centerCrop"
                        android:src="@drawable/erp_one" />


                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
