<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authViewModel"
            type="com.ocd.amygdala.ui.fragment.authHost.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_screen"
        tools:context="com.ocd.amygdala.ui.fragment.authHost.AuthFragment">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvStay"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Welcome_Text"
            android:textAlignment="center"
            android:textColor="@color/Color_Primary_Color"
            android:textSize="@dimen/Welcome_Text"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvStay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.154" />

        <TextView
            android:id="@+id/tvStay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:padding="20dp"
            android:text="@string/stay_in_touch"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button"
            android:onClick="@{()-> authViewModel.startNavigationToLogin()}"
            android:text="@string/empty_string"
            android:textAllCaps="false"
            android:textColor="@color/mainBgColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStay" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="93dp"
            android:layout_height="14dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/not_a_member"
            android:onClick="@{()-> authViewModel.navigateToSignUp()}"
            android:text="@string/Empty_String"
            android:textAllCaps="false"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>