<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Use a data block to declare variables. -->
    <data>
        <!-- Declare a variable by specifying a name and a data type. -->
        <!-- Use fully qualified name for the type. -->
        <variable
            name="newPost"
            type="com.ocd.amygdala.data.FeedModelDepre" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.feed.Feed"
        android:background="@drawable/background">



        <androidx.cardview.widget.CardView
            android:id="@+id/Profile_Picture"
            android:layout_width="@dimen/Profile_Picture"
            android:layout_height="@dimen/Profile_Picture"
            app:cardCornerRadius="@dimen/Corner_Radius_Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Profile_Picture_Content_Des"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nickname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@={newPost.post}"
            android:textAlignment="center"
            android:textColor="@color/Text_white"
            android:textSize="@dimen/normal_text"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/create_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create_Post"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname_text" />

        <TextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/Your_Feed"
            android:textColor="@color/Text_white"
            android:textSize="@dimen/Welcome_Text"
            app:layout_constraintStart_toEndOf="@+id/Profile_Picture"
            app:layout_constraintTop_toTopOf="@+id/Profile_Picture" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="293dp"
            android:layout_height="111dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:fontFamily="@font/opensans_regular"
            android:inputType="textPersonName"
            android:text="@string/What_Is_New"
            android:textColor="@color/Text_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Profile_Picture" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Scroll_View_Dimens_Height"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintVertical_bias="0.373">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/Profile_Picture"
                    android:layout_height="@dimen/Profile_Picture"
                    app:cardCornerRadius="@dimen/Corner_Radius_Small">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="@dimen/Profile_Picture"
                        android:layout_height="@dimen/Profile_Picture"
                        android:contentDescription="@string/Profile_Picture_Content_Des"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person" />


                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/Example_Post"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
